--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,11 @@
   font-size: 14px;
   color: #666;
   border-bottom: 1px dotted #666;
-  padding: 2px 0; }
+  padding: 2px 0;
+  cursor: pointer; }
+  .curs__item__lector:hover {
+    border-bottom: 0;
+    padding-bottom: 3px; }
 
 .curs__lection {
   padding: 10px 0px 10px 100px;
@@ -154,28 +158,28 @@
 .curs__section {
   display: none; }
 
-#shri_on:checked ~ .curs .curs__lection[data-tag="shri"] {
+#curs_shri:checked ~ .curs .curs__lection[data-tag="shri"] {
   display: block; }
 
-#shmd_on:checked ~ .curs .curs__lection[data-tag="shmd"] {
+#curs_shmd:checked ~ .curs .curs__lection[data-tag="shmd"] {
   display: block; }
 
-#shmr_on:checked ~ .curs .curs__lection[data-tag="shmr"] {
+#curs_shmr:checked ~ .curs .curs__lection[data-tag="shmr"] {
   display: block; }
 
-#all_on:checked ~ .curs .curs__lection[data-tag="all"] {
+#curs_all:checked ~ .curs .curs__lection[data-tag="all"] {
   display: block; }
 
-#october_on:checked ~ .curs .curs__section[data-month="october"] {
+#month_october:checked ~ .curs .curs__section[data-month="october"] {
   display: block; }
 
-#november_on:checked ~ .curs .curs__section[data-month="november"] {
+#month_november:checked ~ .curs .curs__section[data-month="november"] {
   display: block; }
 
-#december_on:checked ~ .curs .curs__section[data-month="december"] {
+#month_december:checked ~ .curs .curs__section[data-month="december"] {
   display: block; }
 
-#april_on:checked ~ .curs .curs__section[data-month="april"] {
+#month_april:checked ~ .curs .curs__section[data-month="april"] {
   display: block; }
 
 .sort {
@@ -200,3 +204,17 @@ input[type="checkbox"]:checked + label {
 
 .disable {
   display: none; }
+
+.show-all,
+.hide-all {
+  margin-left: 20px;
+  font-size: 14px;
+  color: #666;
+  border-bottom: 1px dotted #666;
+  padding: 2px 0;
+  cursor: pointer;
+  padding: 0; }
+  .show-all:hover,
+  .hide-all:hover {
+    border-bottom: 0;
+    padding-bottom: 3px; }
